@@ -1,0 +1,26 @@
+
+#include "SteppingAction.hh"
+
+//-----------------------------------------------------------------//
+// Constructor
+//-----------------------------------------------------------------//
+SteppingAction::SteppingAction()
+{
+  // empty
+}
+
+//-----------------------------------------------------------------//
+// Destructor
+//-----------------------------------------------------------------//
+SteppingAction::~SteppingAction()
+{
+  // empty
+}
+
+//-----------------------------------------------------------------//
+// Empty Action -- Using Stepping Verbos
+//-----------------------------------------------------------------//
+void SteppingAction::UserSteppingAction(const G4Step*)
+{
+  // empty
+}
