@@ -1,0 +1,40 @@
+
+#include "SteppingVerbose.hh"
+
+//-----------------------------------------------------------------//
+// Constructor
+//-----------------------------------------------------------------//
+SteppingVerbose::SteppingVerbose()
+{
+
+}
+
+//-----------------------------------------------------------------//
+// Destructor
+//-----------------------------------------------------------------//
+SteppingVerbose::~SteppingVerbose()
+{
+
+}
+
+//-----------------------------------------------------------------//
+// Get step info
+//-----------------------------------------------------------------//
+void SteppingVerbose::StepInfo()
+{
+
+  // Necessary
+  CopyState();
+
+}
+
+//-----------------------------------------------------------------//
+// Track info
+//-----------------------------------------------------------------//
+void SteppingVerbose::TrackingStarted()
+{
+
+  // Necessary
+  CopyState();
+
+}
